--- a/user_css/main.css
+++ b/user_css/main.css
@@ -26,6 +26,8 @@ ul{
     list-style: none;
     padding: 0;
     margin: 0;
+    background-color: gray;
+    text-decoration-color: white;
 }
 
 #container {
