--- a/user_css/main.css
+++ b/user_css/main.css
@@ -134,7 +134,8 @@ div#menu {
     position: absolute;
     top:100%;
     left:0;
-    background-color: rgb(245, 245, 245);
+    color: #fff;
+    background-color: rgb(94, 88, 88);
     box-shadow: 0 5px 10px 0 rgba(0,0,0,.1);
     transition: .3s ease;
     z-index: 1;
